--- a/studyApplication/src/studyapplication/StartingMenu.form
+++ b/studyApplication/src/studyapplication/StartingMenu.form
@@ -64,6 +64,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Review Notes"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNotesActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnQuiz">
       <Properties>
