--- a/studyApplication/src/studyapplication/StartingMenu.form
+++ b/studyApplication/src/studyapplication/StartingMenu.form
@@ -75,6 +75,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Quiz"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnQuizActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnExit">
       <Properties>
