exit button formatted

--- a/studyApplication/src/studyapplication/StartingMenu.form
+++ b/studyApplication/src/studyapplication/StartingMenu.form
@@ -83,6 +83,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Exit"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnExitMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblStudyGuide">
       <Properties>
