--- a/studyApplication/src/studyapplication/quizGUI.form
+++ b/studyApplication/src/studyapplication/quizGUI.form
@@ -137,6 +137,9 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jProgressBar1MouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
