--- a/studyApplication/src/studyapplication/StartingMenu.form
+++ b/studyApplication/src/studyapplication/StartingMenu.form
@@ -62,7 +62,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="66" red="66" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Review Notes"/>
+        <Property name="text" type="java.lang.String" value="Study Material"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNotesActionPerformed"/>
